@@ -41,14 +41,17 @@ std::vector<Complex> allroots
 //   Returns at least N roots of the function f, starting from the rectangle
 //   (bottom_left,top_right).
 //
-//   If needed, the search region is expanded upwards and to the right.
+//   If needed, the search region is expanded upwards and to the right or
+//   downwards and to the right..
 //
 /////////////////////////////////////////////////////////////////////////////
+
+typedef enum {ur, dr, r} ExpandDirection;
 
 std::vector<Complex> N_roots
   (ComplexFunction& f, unsigned int N,
    const Complex& bottom_left, const Complex& top_right,
-   Real eps=1e-4, Real mu=1e-4, unsigned int max_k=4);
+   Real eps=1e-4, Real mu=1e-4, unsigned int max_k=4, ExpandDirection dir=ur);
 
 
 #endif
