@@ -1,3 +1,10 @@
+2002-05-01  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* allroots.h: Add support for downwards contour extension.
+	* allroots.cpp: Ditto.
+	* contour.h: Ditto.
+	* contour.cpp: Ditto.
+
 2002-04-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* mueller.h: Add support for multiple roots and for 1 and
